tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__KillEnderDragon-AAAAAAAAAAAAAAAAAAABkA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 400,
  "prerequisites": [
    986
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The dragon must die. Long enough has she destroyed those precious endstone blocks!\n\n[note]PS: Hold shift and whack it with a vanilla sword.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Kill Ender Dragon",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    986
  ],
  "rewards": [],
  "tasks": []
}
