tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__LetHerGo-AAAAAAAAAAAAAAAAAAADig==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 906,
  "prerequisites": [
    907
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It seems the cold doesn't bother her. Committed crimes: None. But... you know... you have to progress somehow...\n\n[note]PS: Keep going.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Let Her Go",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 864000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    907
  ],
  "rewards": [],
  "tasks": []
}
