tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__SecretANice-AAAAAAAAAAAAAAAAAAADjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 908,
  "prerequisites": [
    451
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Hey, you! I want that lamp. I have something for you in return. You don't need it anyways, do you?\n\n[note]If you want the TF achievement, get that first.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Secret: A Nice....",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "SECRET"
  },
  "required_prerequisites": [
    451
  ],
  "rewards": [],
  "tasks": []
}
