tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__SecretTheTradeFo-AAAAAAAAAAAAAAAAAAADlQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 917,
  "prerequisites": [
    456
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You have been busy my friend. I have something for you. Give me your hearts, and I will magically enhance them so you can actually use them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Secret: The Trade For Life",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 0,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    456
  ],
  "rewards": [],
  "tasks": []
}
